assets/sass/fractal6.scss
/* ... */
.is-smaller2 {
    font-size: 80% !important;
}
.is-tiny {
    font-size: 65% !important;
}
.is-larger {
    font-size: 120% !important;
}

.is-selectable {
  -webkit-touch-callout: text;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.tooltip.has-tooltip-multiline::before {
  white-space: pre-line !important;
}

[data-tooltip] {
    @include mobile {
        // Prevent navbartop overflow
         &::before {
            width:0
        }
    }
}
.tooltip {
    // Tooltip has fadin, and no fadout
    transition: none !important;
    transition-delay: none !important;

    &.has-tooltip-active,
    &:focus,
    &:hover {
        &::after,
        &::before {
            transition: all .15s linear !important;
            transition-delay: var(--tooltip-transition-duration) !important;
        }
    }
}

.badge {
    right: 6px;
    top: 6px;
    //
    height: 8px;
    border-radius: 8px;
    min-width: 8px;
    box-shadow: none;
}

.arrow {
	border: solid;
	border-width: 0 3px 3px 0;
	display: inline-block;
	padding: 3px;
	&.right {
		transform: rotate(-45deg);
		-webkit-transform: rotate(-45deg);
	}
	&.left {
		transform: rotate(135deg);
		-webkit-transform: rotate(135deg);
	}
	&.up {
		transform: rotate(-135deg);
		-webkit-transform: rotate(-135deg);
	}
	&.down {
		transform: rotate(45deg);
		-webkit-transform: rotate(45deg);
		margin-bottom: 2px;
	}
}

.dropdown-content {
    max-height: 280px;
    overflow: auto;
}

.dropdown-menu.is-right {
	left: auto;
	right: 0;
}

.media.is-small {
    font-size: 0.9rem !important;
}

.dropdown-menu {
    min-width: 7rem !important;
    width: max-content;
    max-width: 330px;
}

.tabs, .tabs.is-boxed  {
    a {
        text-decoration: none !important;
    }
    ul {
        border-bottom-color: var(--border-color-light) !important;
    }
    li.is-active a {
        border-color: var(--border-color-light);
    }
    li:not(.is-active) a:hover {
        background-color: inherit;
        border-bottom-color: initial !important;
    }
}

.tabs.is-boxed {
    a {
        border-radius: 8px 8px 0 0 !important;
        padding-right: 1rem !important;
        padding-left: 1rem !important;
    }
}

.tabs:not(.is-boxed) {
    li a {
        border-bottom-color: transparent !important;
        border-bottom-width: 2px !important;
    }
    li.is-active a {
        //font-weight: 600 !important;
        border-bottom-color: var(--link) !important;
        border-bottom-width: 2px !important;
    }
}

.no-overflow {
    overflow: hidden !important;
}

.box {
    border: 1px solid var(--border-color-light) !important;
    box-shadow: 0 .33em .66em -0.125em rgba($scheme-invert, 0.1), 0 0px 0 1px rgba($scheme-invert, 0.02);
    .media {
        &.is-active {
            border: solid 2px var(--link) !important;
        }

        & + .media {
            border-top: 1px solid var(--border-color-light) !important;
        }
    }

    &.is-shrinked {
        padding: 0;
        .media {
            margin: 0;
            padding: 0.7rem 0.9rem;
        }
    }

    &.is-shrinked2 {
        padding: 0;
        .media {
            margin: 0;
            padding: 0.4rem 0.7rem;
        }
    }

    &.box.has-background-light {
        label {color: var(--grey);}
        color: black;
    }
    &.box.has-background-danger {
        color: white;
    }
}

.bulma-issue-33 { // found in the archived repo bulma-tooltip of wikiki
    @include desktop {
        &:hover {
            overflow: visible !important;
        }
    }
}

.scrollbar-thin {
    // @debug see : https://bugzilla.mozilla.org/show_bug.cgi?id=1460109
    scrollbar-width: thin;
    scrollbar-color: grey var(--bbc);
    //scrollbar-color: var(--grey-darker) var(--background-evidence) ;
    &::-webkit-scrollbar {
        width: 6px;
        color: grey;
        //background: var(--grey-dark);
    }
    &::-webkit-scrollbar-thumb {
        border-radius: 20px;
        background: grey;
    }
}

.menu .menu-label {
    font-weight: bold !important;
}

// Message
.message {
    background-color: var(--bbc);
    .message-header {
        color: var(--text-light) !important;
        background-color: var(--comment-header-background-color);
    }
}
.acc {
    .message-header {
        color: var(--text) !important;
    }
}
.message:not(.acc) {
    border: 1px solid  var(--border-color-light)  !important;
    border-radius: 6px !important;
    .message-header {
        border-radius: 6px 6px 0 0 !important;
    }
}

// Table

.table-container {
    overflow-x: auto;
    overflow-y: inherit;
    @include desktop {
        overflow: visible !important;
    }
}

.table, table.table {
    border: 1px solid var(--table-border-color);
    border-radius: 6px !important;

    thead th {
        font-weight: 600;
        font-size: 90% !important;
        color: var(--is-discrete);
    }

	th:first-child {
		border-radius: 6px 0 0 0;
	}
	th:last-child {
		border-radius: 0 6px 0 0;
	}
	td:first-child, th:first-child {
		border-left: medium none;
	}
	th {
		border-top: medium none;
        border: none;
		padding-top: .5rem;
		padding-bottom: .5rem;
	}
	td {
		padding-top: 1.1rem;
		padding-bottom: 1.1rem;
        border-bottom: 1px solid var(--table-border-color);
	}
}

// Card

.card {
  border-radius: 6px;
  //border:1px solid var(--border-color-light) !important;
}

// Breadcumb
.breadcrumb {
    a:hover {
        color: var(--link-hover);
    }
}

// @debug: hover is not computed from variable defined here...
.is-primary {
    &:not(.hero):hover {
        background-color: darken($primary, 5) !important;
    }
}

.is-center {
    // Dropdown menu centering
    left: 50% !important;
    right: auto !important;
    transform: translate(-50%, 0) !important;
}

// Notification
.notification {
    & > a {
        color: var(--link) !important;
        text-decoration: none !important;
    }
}
/* ... */

